Avoid input and select zoom on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+select, input {
+  font-size: 16px;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
